-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2024-05-08T05:33:09.320Z

CREATE TABLE "Users" (
  "user_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "fist_name" varchar NOT NULL,
  "last_name" varchar NOT NULL,
  "email" varchar UNIQUE NOT NULL,
  "password" varchar NOT NULL,
  "phone" varchar NOT NULL,
  "isAdmin" bool NOT NULL
);

CREATE TABLE "DiscountCoupons" (
  "coupon_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "created_by" int NOT NULL,
  "created_at" date NOT NULL,
  "valid_until" date NOT NULL
);

CREATE TABLE "Categories" (
  "category_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL,
  "description" varchar NOT NULL
);

CREATE TABLE "Products" (
  "product_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL,
  "description" varchar NOT NULL,
  "price" decimal NOT NULL,
  "stock" int NOT NULL,
  "category_id" int NOT NULL,
  "brand" varchar,
  "model" varchar
);

CREATE TABLE "Order" (
  "order_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "product_id" int NOT NULL,
  "user_id" int NOT NULL,
  "coupon_id" int,
  "price" decimal NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "Reviews" (
  "review_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "order_id" int NOT NULL,
  "rating" int NOT NULL,
  "review_date" date NOT NULL
);

CREATE INDEX ON "Products" ("category_id");

CREATE INDEX ON "Order" ("order_id");

CREATE INDEX ON "Order" ("product_id");

CREATE INDEX ON "Reviews" ("order_id");

ALTER TABLE "DiscountCoupons" ADD FOREIGN KEY ("created_by") REFERENCES "Users" ("user_id");

ALTER TABLE "Products" ADD FOREIGN KEY ("category_id") REFERENCES "Categories" ("category_id");

ALTER TABLE "Order" ADD FOREIGN KEY ("product_id") REFERENCES "Products" ("product_id");

ALTER TABLE "Order" ADD FOREIGN KEY ("user_id") REFERENCES "Users" ("user_id");

ALTER TABLE "Order" ADD FOREIGN KEY ("coupon_id") REFERENCES "DiscountCoupons" ("coupon_id");

ALTER TABLE "Reviews" ADD FOREIGN KEY ("order_id") REFERENCES "Order" ("order_id");
