Project GadgetStore {
  database_type: 'PostgreSQL'
  Note: 'Gadget store project'
}


Table Users {
  user_id int [primary key, increment]
  fist_name varchar [not null]
  last_name varchar [not null]
  email varchar [not null, unique]
  password varchar [not null]
  phone varchar [not null]
  isAdmin bool [not null]
}

Table DiscountCoupons {
    coupon_id int [primary key, increment]
    created_by int [not null, ref: > Users.user_id]
    created_at date [not null]
    valid_until date [not null]
}



Table Categories {
  category_id int [primary key, increment]
  name varchar [not null]
  description varchar [not null]
}

Table Products {
  product_id int [primary key, increment]
  name varchar [not null]
  description varchar [not null]
  price decimal [not null]
  stock int [not null]
  category_id int [not null, ref: > Categories.category_id]
  brand varchar
  model varchar
  Indexes {
    category_id
  }
}


Table Order {
  order_id int [primary key, increment]
  product_id int [not null, ref: > Products.product_id]
  user_id int [not null, ref: > Users.user_id]
  coupon_id int [ref: > DiscountCoupons.coupon_id]
  price decimal [not null]
  created_at timestamptz [not null, default: `now()`]
  Indexes {
    order_id
    product_id
  }
}

Table Reviews {
  review_id int [primary key, increment]
  order_item_id int [not null, ref: > Order.order_item_id]
  rating int [not null]
  review_date date [not null]
  Indexes {
    product_id
    user_id
  }
}
